--- a/style.css
+++ b/style.css
@@ -172,4 +172,13 @@ body {
     font-size: 12px;
     margin-left: 5px;
   }
+  @media (max-width: 768px) {
+    .gallery {
+      grid-template-columns: 1fr;  
+  
+    img {
+      width: 100%;  
+      height: auto;  
+    }
+  }
   
